<resources>
    <string name="app_name">Quizzer</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="enter_username">Enter your username</string>
    <string name="enter_password">Enter your password</string>
    <string name="age">Age</string>
    <string name="school">School</string>
    <string name="sport">Sport</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="done">Done</string>
</resources>
