<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rootView"
    android:background="@mipmap/app_background_2"
    tools:context=".view.SignUpActivity">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/username_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:maxLines="1"
        android:layout_marginStart="64dp"
        android:layout_marginTop="24dp"
        android:hint="@string/username"
        android:inputType="text"
        android:nextFocusDown="@string/password"
        app:layout_constraintBottom_toTopOf="@+id/password_editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintVertical_chainStyle="packed"
        app:met_minCharacters="5" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/password_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:maxLines="1"
        android:layout_marginStart="64dp"
        android:layout_marginTop="8dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:nextFocusDown="@id/school_edittext"
        app:layout_constraintBottom_toTopOf="@+id/school_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_edittext"
        app:met_minCharacters="5" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/school_edittext"
        android:layout_width="0dp"
        android:maxLines="1"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="8dp"
        android:hint="@string/school"
        android:inputType="text"
        android:nextFocusDown="@id/age_edittext"
        app:layout_constraintBottom_toTopOf="@+id/age_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_editText" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/age_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:layout_marginStart="64dp"
        android:maxLines="1"
        android:layout_marginTop="8dp"
        android:hint="@string/age"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@id/signup_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/school_edittext" />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_background"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/age_edittext"
        app:layout_constraintStart_toStartOf="@+id/age_edittext"
        app:layout_constraintTop_toBottomOf="@+id/age_edittext" />


    <TextView
        android:id="@+id/textView"
        style="@style/Base.TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/app_name"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@id/username_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

</android.support.constraint.ConstraintLayout>